--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -4,4 +4,8 @@
 .conteiner{ 
     margin: 0 auto;
     padding: 0px 15px 100px 15px;
-    width: 500px;  }
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+ }
